Bug 476718 - Filelight segfault when viewing "trash:/" and clicking "up"
Summary: Filelight segfault when viewing "trash:/" and clicking "up"
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.1
Platform: Kubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-11-08 19:24 UTC by Halmut Holz
Modified: 2025-06-12 13:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halmut Holz 2023-11-08 19:24:36 UTC
Application: filelight (23.08.1)

Qt Version: 5.15.10
Frameworks Version: 5.110.0
Operating System: Linux 6.5.0-10-generic x86_64
Windowing System: X11
Distribution: Ubuntu 23.10
DrKonqi: 5.27.8 [KCrashBackend]

-- Information about the crash:
KUBUNTU 23.10

Steps to reproduce:
- open trash in KDE ("trash:/")
- bottom right click free space displayed
- a context menu opens, click filelight icon -> filelight opens with content of the trashcan
- in the menu bar click "^UP" -> filelight crashes

The crash can be reproduced every time.

-- Backtrace:
Application: Filelight (filelight), signal: Segmentation fault

[KCrash Handler]
#4  0x00007fb1600cae0e in QEventLoop::exit(int) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fb16155a854 in ?? () from /lib/x86_64-linux-gnu/libKF5CoreAddons.so.5
#6  0x00007fb1600f99a0 in QObject::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fb160d6bc82 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#8  0x00007fb1600cc7a8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007fb1600cfeb1 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007fb1601286f7 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#11 0x00007fb15e913b2c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#12 0x00007fb15e96f46f in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#13 0x00007fb15e911d20 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#14 0x00007fb160127daa in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#15 0x00007fb1600cb15b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#16 0x00007fb1600d3904 in QCoreApplication::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#17 0x00005593fbe039e9 in ?? ()
#18 0x00007fb15f6280d0 in __libc_start_call_main (main=main@entry=0x5593fbe00be0, argc=argc@entry=2, argv=argv@entry=0x7ffdebc7aed8) at ../sysdeps/nptl/libc_start_call_main.h:58
#19 0x00007fb15f628189 in __libc_start_main_impl (main=0x5593fbe00be0, argc=2, argv=0x7ffdebc7aed8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffdebc7aec8) at ../csu/libc-start.c:360
#20 0x00005593fbe04065 in ?? ()
[Inferior 1 (process 17098) detached]

Reported using DrKonqi
Comment 1 Bug Janitor Service 2025-06-10 22:29:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/filelight/-/merge_requests/176
Comment 2 Nate Graham 2025-06-12 13:41:23 UTC
Git commit 0deda7916291ce13e74d97d698c56bdced591b24 by Nate Graham, on behalf of Amy Rose.
Committed on 12/06/2025 at 13:41.
Pushed by ngraham into branch 'master'.

Disable "Up" action when up URL matches current URL


Dolphin disables its "Up" action when the up URL is the same as the
current URL. This commit implements that same behavior for Filelight
to avoid a crash scenario and nonsensical behavior.
FIXED-IN: 25.08.0

M  +2    -0    src/mainContext.cpp
M  +3    -0    src/mainContext.h
M  +1    -1    src/qml/MapPage.qml

https://invent.kde.org/utilities/filelight/-/commit/0deda7916291ce13e74d97d698c56bdced591b24