Disable "Up" action when up URL matches current URL

Dolphin disables its "Up" action when the up URL is the same as the
current URL. This commit implements that same behavior for Filelight
to avoid a crash scenario and nonsensical behavior.

BUG: 476718
FIXED-IN: 25.08.0