src/qml/MapPage.qml
@@ -52,7 +52,7 @@ Kirigami.Page {
 
     Kirigami.Action {
         id: goUpAction
-        enabled: page.state === ""
+        enabled: page.state === "" && MainContext.upEnabled
         icon.name: "go-parent-folder"
         text: i18nc("@action", "Up")
         onTriggered: appWindow.slotUp()
